@startuml
!theme plain

entity users {
  *id : bigserial NOT NULL,
  --
  usernick : character varying(255) COLLATE pg
  email : character varying(255) COLLATE pg
  email_verified_at : timestamp(0) without time zone,
  remember_token : character varying(100) COLLATE pg
  created_at : timestamp(0) without time zone,
  activo : boolean NOT NULL DEFAULT true,
}

entity roles {
  *id : bigserial NOT NULL,
  --
  guard_name : character varying(255) COLLATE pg
  created_at : timestamp(0) without time zone,
}

entity permissions {
  *id : bigserial NOT NULL,
  --
  guard_name : character varying(255) COLLATE pg
  created_at : timestamp(0) without time zone,
}

entity model_has_roles {
  *role_id : bigint NOT NULL,
  --
  model_id : bigint NOT NULL,
}

entity model_has_permissions {
  *permission_id : bigint NOT NULL,
  --
  model_id : bigint NOT NULL,
}

entity role_has_permissions {
  *permission_id : bigint NOT NULL,
  --
}

entity personal_access_tokens {
  *id : bigserial NOT NULL,
  --
  tokenable_id : bigint NOT NULL,
  token : character varying(64) COLLATE pg
  abilities : text COLLATE pg
  last_used_at : timestamp(0) without time zone,
  created_at : timestamp(0) without time zone,
}

entity sessions {
  *id : character varying(255) COLLATE pg
  --
  user_id : bigint,
  user_agent : text COLLATE pg
  payload : text COLLATE pg
  last_activity : integer NOT NULL,
}

model_has_permissions }o--|| permissions : permission_id -> id
model_has_roles }o--|| roles : role_id -> id
role_has_permissions }o--|| permissions : permission_id -> id
role_has_permissions }o--|| roles : role_id -> id
@enduml